Praktikum 10 valmis
