# server/item.router.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const mongoose = require("mongoose");
 const Item = require("./item.model.js");
 
-router.post("/items", (req, res) => {
+router.post("/", (req, res) => {
     const props = {
         imgSrc: "google.com",
         title: "phone red",
@@ -26,7 +26,7 @@ router.post("/items", (req, res) => {
 * Returns all items
 * */
 
-router.get("/items", (req, res) => {
+router.get("/", (req, res) => {
     Item.find({}, function(err, items) {
         if(err) {
             console.log("Error: ", err);
@@ -41,7 +41,7 @@ router.get("/items", (req, res) => {
 * Returns an item
 * */
 
-router.get("/items/:itemId", (req, res) => {
+router.get("/:itemId", (req, res) => {
     Item.findById(req.params.itemId, function(err, item) {
         if(err) {
             console.log("Error: ", err);
@@ -52,7 +52,7 @@ router.get("/items/:itemId", (req, res) => {
     });
 });
 
-router.delete("/items/:itemId", (req, res) => {
+router.delete("/:itemId", (req, res) => {
     Item.deleteOne({"_id" : mongoose.Types.ObjectId(req.params.itemId)}, function(err) {
         if(err) {
             console.log("Error: ", err);
