# server/user.model.js
@@ -4,7 +4,8 @@ const bcrypt = require("bcrypt");
 const userSchema = new mongoose.Schema({
     email: {type: String, required: true, unique: true},
     hash: {type: String, required: true},
-    createdAt: { type: Date, default: Date.now }
+    createdAt: {type: Date, default: Date.now},
+    cart: {type: [String], default:[]}
 });
 
 userSchema.statics.login = function({email, password}) {
@@ -26,7 +27,8 @@ userSchema.statics.login = function({email, password}) {
                 resolve({
                     email: userDoc.email,
                     createdAt: userDoc.createdAt,
-                    _id: userDoc._id
+                    _id: userDoc._id,
+                    cart: userDoc.cart
                 });
             });
         });
